--- a/src/pages/Consumo/RegistroConsumo/Tabla/style.css
+++ b/src/pages/Consumo/RegistroConsumo/Tabla/style.css
@@ -1,5 +1,5 @@
 .fontTitle{
-  font-family: 'Ubuntu';
+  font-family:  "Open Sans", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -9,22 +9,16 @@
 }
 
 .fontColumnHeader{
-  font-family: 'Ubuntu';
-  font-style: normal;
+  font-family:  "Open Sans", sans-serif;
   font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.1em;
-  color: #2B2B2B;
+  font-size: 18px;
 }
 
 .fontRows{
-  font-family: 'Ubuntu';
+  font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
-  line-height: 14px;
-  letter-spacing: 0.1em;
   color: #2B2B2B;
 }
 
