--- a/src/components/PersonalizableTabla/style.css
+++ b/src/components/PersonalizableTabla/style.css
@@ -1,18 +1,24 @@
 .fontTitle{
   font-family:  "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: 700;
   font-size: 16px;
+  line-height: 36px;
   letter-spacing: 0.1em;
   color: #2B2B2B;
 }
 
 .fontColumnHeader{
   font-family:  "Open Sans", sans-serif;
-  font-size: 14px;
+  font-weight: 700;
+  font-size: 18px;
 }
 
 .fontRows{
   font-family: "Open Sans", sans-serif;
-  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
   color: #2B2B2B;
 }
 
